--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "next": "9.3.5",
     "pg": "^8.0.3",
     "react": "16.13.1",
