--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cookie": "^0.4.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
     "pg": "^8.0.3",
     "react": "16.13.1",
