--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd -f .env next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.3.5",
+    "next": "^9.4.0",
     "pg": "^8.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
